# Catmull-clarkeSubdivision

./: CMakeLists.txt  Labb3  Labb3.cbp  Makefile  PVS-Studio.lic  README.md  cmake_install.cmake  compile_commands.json  halfEdgeMesh.cpp  halfEdgeMesh.h  main.cpp  memHalfEdgeMesh.cpp  memHalfEdgeMesh.h  mem_block.cpp  mem_block.h  tdMathLibNew.h
